# wid

./: .dockerignore  .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  eslint.config.cjs  go.mod  index.html  package-lock.json  package.json  pyproject.toml  social-preview.html
.github/workflows/: ci.yml  pages.yml  publish.yml
c/: Makefile
c/include/: wid.h
c/src/: main.c  wid.h
c/tests/: wid_tests.c
docs/: index.html  manifest.json
docs/qa/: developer.md  security-crypto-proof.md
go/: wid.go  wid_test.go
go/cmd/wid/: main.go
python/tests/: conftest.py  test_async_api.py  test_crypto.py  test_wid.py
python/wid/: __init__.py  __main__.py  async_api.py  cli.py  core.py  hlc.py  parse.py  wid.py
qa/: README.md  codebase-map.md
rust/src/: async_api.rs  hlc.rs  lib.rs  main.rs  manifest.rs  wid.rs
sh/: wid
spec/: CRYPTO_SPEC.md  SIGNED_ENVELOPE_SPEC.md  SPEC.md  capabilities.json  quick-usage.md
spec/conformance/: crypto.json  generation.json  invalid.json  security_matrix.json  signed_envelope.json  signed_envelope_v1.json  signed_envelope_v1_1.json  stream.json  valid.json
tools/: check_capabilities.py  check_envelope_compat.py  check_id_conformance.py  check_key_rotation_drill.py  check_security_matrix.py  check_signed_envelope_spec.py  check_stream_conformance.py  check_wotp_parity.sh  ensure_bash.sh  hardening_check.sh  patch_mobile_arcade_links.sh  smoke.sh  smoke_crypto.sh  soak_stream_sql.py
typescript/: tsconfig.json  tsup.config.ts  vitest.config.ts
typescript/src/: cli.ts  hlc.ts  index.ts  manifest.ts  time.ts  wid.ts
typescript/test/: hlc.test.ts  manifest.test.ts  wid.test.ts
