[package]
name = "waldiez-wid"
version = "1.0.0"
edition = "2024"
rust-version = "1.93.0"
license = "MIT"
description = "WID — time-ordered, human-readable, collision-resistant identifier"
repository = "https://github.com/waldiez/wid"
homepage = "https://waldiez.github.io/wid"
readme = "README.md"

[lib]
path = "rust/src/lib.rs"

[[bin]]
name = "wid"
path = "rust/src/main.rs"

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
rand = "0.10"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
hex = "0.4.3"
thiserror = "2.0.18"
regex = "1.12.3"
once_cell = "1.21.3"

[dev-dependencies]
nanoid = "0.4"
ulid = "1.2.1"
svix-ksuid = "0.8.0"
criterion = "0.8.2"
futures = "0.3.32"
